--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+body {
+  @apply bg-primary text-white font-sans;
+}
+
+/* 
+@layer utilities {
+  .shadow-custom {
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  }
+} */
